# miniDXF

./: LICENSE.md  README.md  pyproject.toml
src/miniDXF/: __init__.py  document.py  dxf_template.py  entities.py
tests/: test_bbox.py  test_dxf_output.py  test_rotate.py  test_translate.py
